fixed overflow when menu is open

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@ html {
 	@apply scroll-smooth antialiased;
 }
 body {
-	@apply bg-white text-neutral-500 dark:bg-neutral-950 dark:text-neutral-300 [.light_&]:text-neutral-500;
+	@apply bg-white text-neutral-500 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto dark:bg-neutral-950 dark:text-neutral-300 [.light_&]:text-neutral-500;
 }
 
 /* Main typography */
